--- a/public/index.html
+++ b/public/index.html
@@ -624,141 +624,168 @@
 
             <div class="imageMenu">
 
+              <div class="imageMenuLogo">
+                <img src="https://www2.arccorp.com/globalassets/arc-logos/corporate-logos/arc-logo-l-white.png" alt="Airlines Reporting Corporation">
+              </div>
 
               <div class="inputContainer">
                 <div class="row no-gutters">
-                  <div class="col-6">
+                  <div class="col-12">
                     <label for="">Template Type</label>
                     <div class="selectWrapper">
-                      <select class="" name="" placeholder="Please Select">
-                        <option value="job-posting">Job Posting</option>
-                        <option value="social">Social</option>
+                      <select v-on:change="setCurrentTemplate($event)" class="" name="" placeholder="Please Select" >
+                        <option v-for="template in templates" v-bind:value="template.name">{{template.name}}</option>
                       </select>
                     </div>
-                  </div>
-                  <div class="col-6">
-                    <label for="">Size</label>
-                    <div class="selectWrapper">
-                      <select v-on:change="setSize($event)" class="" name="" placeholder="Please Select">
-                        <option value="1250px by 650px">1250px by 650px</option>
-                        <option value="650px by 325px">650px by 325px</option>
-                      </select>
-                    </div>
-                  </div>
-                </div>
 
-                <div class="row no-gutters">
-                  <div class="col-7">
                     <label for="">Background Image</label>
                     <div class="selectWrapper">
+                      <select v-model="background" class="" name="" placeholder="">
+                        <option value="https://images.unsplash.com/photo-1436491865332-7a61a109cc05?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1353&q=80">Airplane Wing</option>
+                        <option value="https://images.unsplash.com/photo-1483450388369-9ed95738483c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Airplane Cabin</option>
+                        <option value="https://images.unsplash.com/photo-1531482615713-2afd69097998?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Two Developers (Man and Woman)</option>
+                        <option value="https://images.unsplash.com/photo-1543269865-0a740d43b90c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">Two Women on Laptop</option>
+                        <option value="https://images.unsplash.com/photo-1543269865-cbf427effbad?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Team Coworkers</option>
+                        <option value="https://www2.arccorp.com/globalassets/homepage/redesign/slides/carousel14.jpg">Overhead Topography</option>
+                        <option value="https://www2.arccorp.com/globalassets/homepage/redesign/slides/carousel16.jpg">Mobile Phone</option>
+                        <option value="https://www2.arccorp.com/globalassets/homepage/redesign/slides/carousel15.jpg">Data Grid</option>
+                        <option value="https://www2.arccorp.com/globalassets/homepage/redesign/slides/carousel12.jpg">Man Drawing on Computer</option>
+                        <option value="https://www2.arccorp.com/globalassets/homepage/redesign/slides/carousel17.jpg">Girl with Credit Card</option>
+                        <option value="https://images.unsplash.com/photo-1542296332-2e4473faf563?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Airport Tarmac</option>
+                        <option value="https://images.unsplash.com/photo-1454496406107-dc34337da8d6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1463&q=80">Passport</option>
+                      </select>
+                    </div>
 
+                    <label for="">Color Theme</label>
+                    <div class="selectWrapper">
                       <select class="" name="">
                         <option value=""></option>
                       </select>
-
-                    </div>
-                  </div>
-                  <div class="col-5">
-                    <label for="">Textbox Width</label>
-                    <div class="selectWrapper">
-
-                      <select v-model="textboxWidth" class="" name="">
-                        <option value="25%">25%</option>
-                        <option value="50%">50%</option>
-                        <option value="75%">75%</option>
-                        <option value="100%">100%</option>
-                      </select>
-
                     </div>
                   </div>
                 </div>
 
+                <a href="#" class="toggleAdvanced" v-on:click="toggleAdvanced()">
+                  View Advanced Options <i v-show="!viewAdvanced" class="fas fa-caret-down"></i> <i v-show="viewAdvanced" class="fas fa-caret-up"></i>
+                </a>
 
+                <div class="advancedTemplateOptions" v-show="viewAdvanced">
 
-                <div class="row no-gutters">
-                  <div class="col-4">
-                    <label for="">Textbox Color</label>
-                    <div class="selectWrapper">
-                      <select v-model="textboxColor" class="" name="">
-                        <option value="#ffffff">White</option>
-                        <option value="#0C1C47">Dark Blue</option>
-                        <option value="#189bb0">Teal</option>
-                        <option value="#d4d4d4">Gray</option>
-                        <option value="#96BE3C">Green</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="col-3">
-                    <label for="">Opacity</label>
-                    <div class="selectWrapper">
-                      <select v-model="textBoxOpacity" class="" name="">
-                        <option value="1">1</option>
-                        <option value="0.9">0.9</option>
-                        <option value="0.8">0.8</option>
-                        <option value="0.7">0.7</option>
-                        <option value="0.6">0.6</option>
-                        <option value="0.5">0.5</option>
-                        <option value="0.4">0.4</option>
-                        <option value="0.3">0.3</option>
-                        <option value="0.2">0.2</option>
-                        <option value="0.1">0.1</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="col-5">
-                    <label for="">Position</label>
-                    <div class="selectWrapper">
-                      <select v-model="position" class="" name="">
-                        <option value="middleCenter">Full Screen</option>
-                        <option value="fullscreen">Middle Center</option>
-                        <option value="centerLeft">Center Left</option>
-                        <option value="centerRight">Center Right</option>
-                        <option value="topRight">Top Right</option>
-                        <option value="topLeft">Top Left</option>
-                        <option value="bottomRight">Bottom Right</option>
-                        <option value="bottomLeft">Bottom Left</option>
-                      </select>
-                    </div>
-                  </div>
-                </div>
+                  <div class="row no-gutters">
 
-                <div class="row no-gutters">
-                  <div class="col-4">
-                    <label for="">Border Size</label>
-                    <div class="selectWrapper">
-                      <select v-model="borderSize" class="" name="">
-                        <option value="0">None</option>
-                        <option value="4px">4px</option>
-                        <option value="8px">8px</option>
-                        <option value="12px">12px</option>
-                        <option value="16px">16px</option>
-                        <option value="20px">20px</option>
-                        <option value="24px">24px</option>
-                      </select>
+                    <div class="col-6">
+                      <label for="">Size</label>
+                      <div class="selectWrapper">
+                        <select v-on:change="setSize($event)" class="" name="" placeholder="Please Select">
+                          <option value="1250px by 650px">1250px by 650px</option>
+                          <option value="650px by 325px">650px by 325px</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="col-6">
+                      <label for="">Textbox Width</label>
+                      <div class="selectWrapper">
+                        <select v-model="textboxWidth" class="" name="">
+                          <option value="20%">20%</option>
+                          <option value="25%">25%</option>
+                          <option value="30%">30%</option>
+                          <option value="40%">40%</option>
+                          <option value="50%">50%</option>
+                          <option value="50%">60%</option>
+                          <option value="70%">70%</option>
+                          <option value="75%">75%</option>
+                          <option value="80%">80%</option>
+                          <option value="100%">100%</option>
+                        </select>
+                      </div>
                     </div>
                   </div>
-                  <div class="col-4">
-                    <label for="">B. Color</label>
-                    <div class="selectWrapper">
-                      <select v-model="borderColor" class="" name="">
-                        <option value="#ffffff">White</option>
-                        <option value="#0C1C47">Dark Blue</option>
-                        <option value="#189bb0">Teal</option>
-                        <option value="#d4d4d4">Gray</option>
-                        <option value="#96BE3C">Green</option>
-                      </select>
 
+                  <div class="row no-gutters">
+                    <div class="col-4">
+                      <label for="">Textbox Color</label>
+                      <div class="selectWrapper">
+                        <select v-model="textboxColor" class="" name="">
+                          <option value="#ffffff">White</option>
+                          <option value="#0C1C47">Dark Blue</option>
+                          <option value="#189bb0">Teal</option>
+                          <option value="#d4d4d4">Gray</option>
+                          <option value="#96BE3C">Green</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="col-3">
+                      <label for="">Opacity</label>
+                      <div class="selectWrapper">
+                        <select v-model="textBoxOpacity" class="" name="">
+                          <option value="1">1</option>
+                          <option value="0.9">0.9</option>
+                          <option value="0.8">0.8</option>
+                          <option value="0.7">0.7</option>
+                          <option value="0.6">0.6</option>
+                          <option value="0.5">0.5</option>
+                          <option value="0.4">0.4</option>
+                          <option value="0.3">0.3</option>
+                          <option value="0.2">0.2</option>
+                          <option value="0.1">0.1</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="col-5">
+                      <label for="">Position</label>
+                      <div class="selectWrapper">
+                        <select v-model="position" class="" name="">
+                          <option value="middleCenter">Full Screen</option>
+                          <option value="fullscreen">Middle Center</option>
+                          <option value="centerLeft">Center Left</option>
+                          <option value="centerRight">Center Right</option>
+                          <option value="topRight">Top Right</option>
+                          <option value="topLeft">Top Left</option>
+                          <option value="bottomRight">Bottom Right</option>
+                          <option value="bottomLeft">Bottom Left</option>
+                        </select>
+                      </div>
                     </div>
                   </div>
-                  <div class="col-4">
-                    <label for="">B. Size</label>
-                    <div class="selectWrapper">
-                      <select v-model="borderPosition" class="" name="">
-                        <option value="top">top</option>
-                        <option value="right">right</option>
-                        <option value="bottom">bottom</option>
-                        <option value="left">left</option>
-                      </select>
+
+                  <div class="row no-gutters">
+                    <div class="col-4">
+                      <label for="">Border Size</label>
+                      <div class="selectWrapper">
+                        <select v-model="borderSize" class="" name="">
+                          <option value="0">None</option>
+                          <option value="4px">4px</option>
+                          <option value="8px">8px</option>
+                          <option value="12px">12px</option>
+                          <option value="16px">16px</option>
+                          <option value="20px">20px</option>
+                          <option value="24px">24px</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <label for="">B. Color</label>
+                      <div class="selectWrapper">
+                        <select v-model="borderColor" class="" name="">
+                          <option value="#ffffff">White</option>
+                          <option value="#0C1C47">Dark Blue</option>
+                          <option value="#189bb0">Teal</option>
+                          <option value="#d4d4d4">Gray</option>
+                          <option value="#96BE3C">Green</option>
+                        </select>
+
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <label for="">B. Position</label>
+                      <div class="selectWrapper">
+                        <select v-model="borderPosition" class="" name="">
+                          <option value="top">top</option>
+                          <option value="right">right</option>
+                          <option value="bottom">bottom</option>
+                          <option value="left">left</option>
+                        </select>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -767,7 +794,7 @@
 
               <div class="inputContainer" v-for="(textItem, index) in text">
                 <label for="">Text {{index + 1}}</label>
-                <input v-model="textItem.copy" type="text" name="" value="">
+                <textarea v-model="textItem.copy" type="text" name="" value="" cols="40" rows="5"></textarea>
                 <div class="row no-gutters">
                   <div class="col-4">
                     <div class="selectWrapper">
@@ -793,6 +820,7 @@
                     <div class="selectWrapper">
                       <select v-model="textItem.size" class="" name="">
                         <option value="72px">72px</option>
+                        <option value="60px">60px</option>
                         <option value="48px">48px</option>
                         <option value="36px">36px</option>
                         <option value="32px">32px</option>
@@ -820,8 +848,7 @@
                   <div v-bind:class="'imageContent '" v-bind:style="[{'background' : rgba, 'width': textboxWidth, borderFormat}, borderFormat, {'max-width': width, 'max-height': height}]">
                     <div class="content_bg"></div>
                     <div class="imageContentInner">
-                      <div v-for="textItem in text" v-bind:style="{'color' : textItem.color, 'font-size': textItem.size, 'font-family': textItem.class}">
-                        {{textItem.copy}}
+                      <div v-for="textItem in text" v-bind:style="{'color' : textItem.color, 'font-size': textItem.size, 'font-family': textItem.class}" v-html="textItem.copy">
                       </div>
                     </div>
                   </div>
