--- a/public/hr.html
+++ b/public/hr.html
@@ -5,7 +5,7 @@
 <!--<![endif]-->
 
 <head>
-  <title>Image Maker</title>
+  <title>HR Image maker</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="HandheldFriendly" content="true" />
@@ -613,7 +613,6 @@
     </div>
     <!-- supernav end -->
   </div>
-  <h1 style="display:none;">The Latest</h1>
 
   <section class="data-panel data-panel--white" data-fullscreenimageblock="true" data-section="data-panel">
     <div class="background">
@@ -645,45 +644,35 @@
                         <optgroup label="ARC">
                           <option value="https://www2.arccorp.com/globalassets/about-us/careers/carrers-jumbo2.jpg">ARC People 1</option>
                           <option value="https://www2.arccorp.com/globalassets/about-us/careers/jumbotronstandardculture.jpg">ARC People 2</option>
+                          <option value="https://www2.arccorp.com/globalassets/about-us/customer-successes/customer-success-jumbo3.jpg">Meeting around table</option>
+                          <option value="https://www2.arccorp.com/globalassets/imageMaker/hr-tool1.jpg">People around iPad</option>
+                          <option value="https://www2.arccorp.com/globalassets/imageMaker/hr-tool2.jpg">Demonstrating with iPad</option>
                         </optgroup>
                         <optgroup label="Stock People">
-                          <option value="https://images.unsplash.com/photo-1531482615713-2afd69097998?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Two Developers (Man and Woman)</option>
-                          <option value="https://images.unsplash.com/photo-1543269865-0a740d43b90c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">Two Women on Laptop</option>
-                          <option value="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Team Meeting w/ Sticky Notes</option>
-                          <option value="https://images.unsplash.com/photo-1543269865-cbf427effbad?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Team Coworkers</option>
                           <option value="https://www2.arccorp.com/globalassets/homepage/redesign/slides/carousel12.jpg">Man Drawing on Computer</option>
                           <option value="https://www2.arccorp.com/globalassets/homepage/redesign/slides/carousel17.jpg">Girl with Credit Card</option>
+
                         </optgroup>
 
                         <optgroup label="Airplanes">
-                          <option value="https://images.unsplash.com/photo-1436491865332-7a61a109cc05?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1353&q=80">Airplane Wing</option>
-                          <option value="https://images.unsplash.com/photo-1483450388369-9ed95738483c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Airplane Cabin</option>
-                          <option value="https://images.unsplash.com/photo-1542296332-2e4473faf563?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Airport Tarmac</option>
-                          <option value="https://images.unsplash.com/photo-1530521954074-e64f6810b32d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Man at Airport</option>
+
                         </optgroup>
 
                         <optgroup label="Data">
                           <option value="https://www2.arccorp.com/globalassets/homepage/redesign/slides/carousel15.jpg">Data Grid</option>
-                          <option value="https://images.unsplash.com/photo-1446776653964-20c1d3a81b06?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80">Overhead North America</option>
                           <option value="https://www2.arccorp.com/globalassets/products--participation/products/odss/jumbotronstandard_1400x483_odss.jpg">Data points connected</option>
                         </optgroup>
 
                         <optgroup label="Misc">
                           <option value="https://www2.arccorp.com/globalassets/homepage/redesign/slides/carousel14.jpg">Overhead Topography</option>
                           <option value="https://www2.arccorp.com/globalassets/homepage/redesign/slides/carousel16.jpg">Mobile Phone</option>
-                          <option value="https://images.unsplash.com/photo-1454496406107-dc34337da8d6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1463&q=80">Passport</option>
                         </optgroup>
-
 
                       </select>
                     </div>
 
                   </div>
                 </div>
-
-                <a href="#" class="toggleAdvanced" v-on:click="toggleAdvanced()">
-                  View Advanced Options <i v-show="!viewAdvanced" class="fas fa-caret-down"></i> <i v-show="viewAdvanced" class="fas fa-caret-up"></i>
-                </a>
 
                 <div class="advancedTemplateOptions" v-show="viewAdvanced">
 
@@ -876,47 +865,13 @@
                 </div>
               </div>
 
-              <div class="inputContainer" v-for="(textItem, index) in text">
-                <label for="">Text {{index + 1}}</label>
-                <textarea v-model="textItem.copy" type="text" name="" value="" cols="40" rows="5"></textarea>
-                <div class="row no-gutters">
-                  <div class="col-4">
-                    <div class="selectWrapper">
-                      <select v-model="textItem.class" class="" name="">
-                        <option value="SourceSansPro-Black">Bold</option>
-                        <option value="SourceSansPro-Regular">Regular</option>
-                        <option value="SourceSansPro-Light">Light</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="col-4">
-                    <div class="selectWrapper">
-                      <select v-model="textItem.color" class="" name="">
-                        <option value="#ffffff">White</option>
-                        <option value="#0C1C47">Dark Blue</option>
-                        <option value="#189bb0">Teal</option>
-                        <option value="#d4d4d4">Gray</option>
-                        <option value="#96BE3C">Green</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="col-4">
-                    <div class="selectWrapper">
-                      <select v-model="textItem.size" class="" name="">
-                        <option value="72px">72px</option>
-                        <option value="60px">60px</option>
-                        <option value="48px">48px</option>
-                        <option value="36px">36px</option>
-                        <option value="32px">32px</option>
-                        <option value="28px">28px</option>
-                        <option value="26px">26px</option>
-                        <option value="24px">24px</option>
-                        <option value="22px">22px</option>
-                      </select>
-                    </div>
-                  </div>
+              <div class="hrInputs">
+                <div class="hrinputContainer inputContainer" v-for="(textItem, index) in text">
+                  <label for="">Text {{index + 1}}</label>
+                  <textarea v-model="textItem.copy" type="text" name="" value="" cols="40" rows="1"></textarea>
                 </div>
               </div>
+
 
               <button v-on:click="saveImage()" class="ctaBtn" style="width: 100%">Save Image</button>
 
@@ -1026,7 +981,7 @@
   <script src="https://www2.arccorp.com/static/js/foundation-custom.js"></script>
   <script src="https://www2.arccorp.com/globalassets/static/app.js?3421"></script>
 
-  <script src='imageMaker.min.js'></script>
+  <script src='hr.min.js'></script>
 
 </body>
 
