--- a/public/hr.html
+++ b/public/hr.html
@@ -873,7 +873,7 @@
               </div>
 
 
-              <button v-on:click="saveImage()" class="ctaBtn" style="width: 100%">Save Image</button>
+              <button v-on:click="saveImage()" class="ctaBtn">Save Image</button>
 
             </div>
 
