--- a/public/index.html
+++ b/public/index.html
@@ -918,7 +918,7 @@
                 </div>
               </div>
 
-              <button v-on:click="saveImage()" class="ctaBtn" style="width: 100%">Save Image</button>
+              <button v-on:click="saveImage()" class="ctaBtn">Save Image</button>
 
             </div>
 
