Update fonts style to show up for both windows and mac

--- a/public/index.html
+++ b/public/index.html
@@ -655,6 +655,17 @@
                           <option value="https://www2.arccorp.com/globalassets/homepage/redesign/slides/carousel17.jpg">Girl with Credit Card</option>
                         </optgroup>
 
+                        <optgroup label="GBTA">
+                          <option value="https://www2.arccorp.com/globalassets/imagemaker/artur-tumasjan-KZSNMN4VxR8-unsplash.jpg">Airport</option>
+                          <option value="https://www2.arccorp.com/globalassets/imagemaker/becca-tapert-QofjUnxy9LY-unsplash.jpg">Girl on Phone</option>
+                          <option value="https://www2.arccorp.com/globalassets/imagemaker/dominik-schroder-FIKD9t5_5zQ-unsplash.jpg">Clouds</option>
+                          <option value="https://www2.arccorp.com/globalassets/imagemaker/dynamic-wang-fPzTfEauDls-unsplash.jpg">Airplane on tarmac</option>
+                          <option value="https://www2.arccorp.com/globalassets/imagemaker/fabio-oyXis2kALVg-unsplash.jpg">Digital Cubes</option>
+                          <option value="https://www2.arccorp.com/globalassets/imagemaker/glenn-carstens-peters-npxXWgQ33ZQ-unsplash.jpg">Computer Typing</option>
+                          <option value="https://www2.arccorp.com/globalassets/imagemaker/nasa-Q1p7bh3SHj8-unsplash.jpg">Globe digital</option>
+                          <option value="https://www2.arccorp.com/globalassets/imagemaker/nina-z-VKg1oXU-vzo-unsplash.jpg">Data Lines</option>
+                        </optgroup>
+
                         <optgroup label="Airplanes">
                           <option value="https://images.unsplash.com/photo-1436491865332-7a61a109cc05?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1353&q=80">Airplane Wing</option>
                           <option value="https://images.unsplash.com/photo-1483450388369-9ed95738483c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Airplane Cabin</option>
@@ -666,6 +677,10 @@
                           <option value="https://www2.arccorp.com/globalassets/homepage/redesign/slides/carousel15.jpg">Data Grid</option>
                           <option value="https://images.unsplash.com/photo-1446776653964-20c1d3a81b06?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80">Overhead North America</option>
                           <option value="https://www2.arccorp.com/globalassets/products--participation/products/odss/jumbotronstandard_1400x483_odss.jpg">Data points connected</option>
+                        </optgroup>
+
+                        <optgroup label="Products">
+                          <option value="https://www2.arccorp.com/globalassets/imagemaker/customreports_ad_image_tw.png">Custom Reports</option>
                         </optgroup>
 
                         <optgroup label="Misc">
@@ -883,9 +898,9 @@
                   <div class="col-4">
                     <div class="selectWrapper">
                       <select v-model="textItem.class" class="" name="">
-                        <option value="SourceSansPro-Black">Bold</option>
-                        <option value="SourceSansPro-Regular">Regular</option>
-                        <option value="SourceSansPro-Light">Light</option>
+                        <option value="Source Sans Pro Black, SourceSansPro-Black, arial, sans-serif">Bold</option>
+                        <option value="Source Sans Pro Regular, SourceSansPro-Regular, arial, sans-serif">Regular</option>
+                        <option value="Source Sans Pro Light, SourceSansPro-Light, arial, sans-serif">Light</option>
                       </select>
                     </div>
                   </div>
