Add additional colors and images

--- a/public/index.html
+++ b/public/index.html
@@ -647,6 +647,8 @@
                           <option value="https://www2.arccorp.com/globalassets/about-us/careers/jumbotronstandardculture.jpg">ARC People 2</option>
                         </optgroup>
                         <optgroup label="Stock People">
+                          <option value="https://www2.arccorp.com/globalassets/imagemaker/GettyImages-554391989.jpg">Collaboration 1</option>
+                          <option value="https://www2.arccorp.com/globalassets/imagemaker/GettyImages-687920320.jpg">Collaboration 2</option>
                           <option value="https://images.unsplash.com/photo-1531482615713-2afd69097998?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Two Developers (Man and Woman)</option>
                           <option value="https://images.unsplash.com/photo-1543269865-0a740d43b90c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">Two Women on Laptop</option>
                           <option value="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Team Meeting w/ Sticky Notes</option>
@@ -671,6 +673,11 @@
                           <option value="https://images.unsplash.com/photo-1483450388369-9ed95738483c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Airplane Cabin</option>
                           <option value="https://images.unsplash.com/photo-1542296332-2e4473faf563?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Airport Tarmac</option>
                           <option value="https://images.unsplash.com/photo-1530521954074-e64f6810b32d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Man at Airport</option>
+                        </optgroup>
+
+                        <optgroup label="Technology">
+                          <option value="https://www2.arccorp.com/globalassets/imageMaker/GettyImages-860310256.jpg">Computer Typing 1</option>
+                          <option value="https://www2.arccorp.com/globalassets/imageMaker/GettyImages-864246666.jpg">Computer Typing 2</option>
                         </optgroup>
 
                         <optgroup label="Data">
@@ -743,6 +750,9 @@
                           <option value="#189bb0">Teal</option>
                           <option value="#d4d4d4">Gray</option>
                           <option value="#96BE3C">Green</option>
+                          <option value="#DF7C32">Orange</option>
+                          <option value="#AB035C">Pink</option>
+                          <option value="#6B1C40">Purple</option>
                         </select>
                       </div>
                     </div>
@@ -804,6 +814,9 @@
                           <option value="#189bb0">Teal</option>
                           <option value="#d4d4d4">Gray</option>
                           <option value="#96BE3C">Green</option>
+                          <option value="#DF7C32">Orange</option>
+                          <option value="#AB035C">Pink</option>
+                          <option value="#6B1C40">Purple</option>
                         </select>
 
                       </div>
@@ -912,6 +925,9 @@
                         <option value="#189bb0">Teal</option>
                         <option value="#d4d4d4">Gray</option>
                         <option value="#96BE3C">Green</option>
+                        <option value="#DF7C32">Orange</option>
+                        <option value="#AB035C">Pink</option>
+                        <option value="#6B1C40">Purple</option>
                       </select>
                     </div>
                   </div>
