--- a/public/index.html
+++ b/public/index.html
@@ -669,10 +669,7 @@
                         </optgroup>
 
                         <optgroup label="Airplanes">
-                          <option value="https://images.unsplash.com/photo-1436491865332-7a61a109cc05?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1353&q=80">Airplane Wing</option>
-                          <option value="https://images.unsplash.com/photo-1483450388369-9ed95738483c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Airplane Cabin</option>
-                          <option value="https://images.unsplash.com/photo-1542296332-2e4473faf563?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Airport Tarmac</option>
-                          <option value="https://images.unsplash.com/photo-1530521954074-e64f6810b32d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">Man at Airport</option>
+                          <option v-for="n in 40" v-bind:value="'https://www2.arccorp.com/globalassets/imageMaker/airplanes/' + n + '.jpg'">Airplane Stock {{n}}</option>
                         </optgroup>
 
                         <optgroup label="Technology">
@@ -698,6 +695,11 @@
 
 
                       </select>
+                    </div>
+
+                    <div class="customUpload">
+                      <label for="">Background Image Upload</label>
+                      <input type="file" ref="myFiles" v-on:change="onFileChange($event)" />
                     </div>
 
                   </div>
