react version of imageMaker

--- a/public/email.html
+++ b/public/email.html
@@ -641,39 +641,31 @@
                     <label for="">Background Image</label>
                     <div class="selectWrapper">
                       <select v-model="background" class="" name="" placeholder="">
-                        <optgroup label="New ARC">
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-1.jpg">ARC Photoshoot 1</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-2.jpg">ARC Photoshoot 2</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-3.jpg">ARC Photoshoot 3</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-4.jpg">ARC Photoshoot 4</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-5.jpg">ARC Photoshoot 5</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-6.jpg">ARC Photoshoot 6</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-7.jpg">ARC Photoshoot 7</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-8.jpg">ARC Photoshoot 8</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-9.jpg">ARC Photoshoot 9</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-10.jpg">ARC Photoshoot 10</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-11.jpg">ARC Photoshoot 11</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-12.jpg">ARC Photoshoot 12</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-13.jpg">ARC Photoshoot 13</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-14.jpg">ARC Photoshoot 14</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-15.jpg">ARC Photoshoot 15</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-16.jpg">ARC Photoshoot 16</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-17.jpg">ARC Photoshoot 17</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-18.jpg">ARC Photoshoot 18</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-19.jpg">ARC Photoshoot 19</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-20.jpg">ARC Photoshoot 20</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-21.jpg">ARC Photoshoot 21</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-22.jpg">ARC Photoshoot 22</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-23.jpg">ARC Photoshoot 23</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-24.jpg">ARC Photoshoot 24</option>
-                          <option value="https://www2.arccorp.com/globalassets/imagemaker/hr/imagemaker-hr-25.jpg">ARC Photoshoot 25</option>
-                        </optgroup>
-                        <optgroup label="Older ARC">
+                        <optgroup label="ARC">
                           <option value="https://www2.arccorp.com/globalassets/about-us/careers/carrers-jumbo2.jpg">ARC People 1</option>
                           <option value="https://www2.arccorp.com/globalassets/about-us/careers/jumbotronstandardculture.jpg">ARC People 2</option>
                           <option value="https://www2.arccorp.com/globalassets/about-us/customer-successes/customer-success-jumbo3.jpg">Meeting around table</option>
                           <option value="https://www2.arccorp.com/globalassets/imageMaker/hr-tool1.jpg">People around iPad</option>
                           <option value="https://www2.arccorp.com/globalassets/imageMaker/hr-tool2.jpg">Demonstrating with iPad</option>
+                        </optgroup>
+                        <optgroup label="Stock People">
+                          <option value="https://www2.arccorp.com/globalassets/homepage/redesign/slides/carousel12.jpg">Man Drawing on Computer</option>
+                          <option value="https://www2.arccorp.com/globalassets/homepage/redesign/slides/carousel17.jpg">Girl with Credit Card</option>
+
+                        </optgroup>
+
+                        <optgroup label="Airplanes">
+
+                        </optgroup>
+
+                        <optgroup label="Data">
+                          <option value="https://www2.arccorp.com/globalassets/homepage/redesign/slides/carousel15.jpg">Data Grid</option>
+                          <option value="https://www2.arccorp.com/globalassets/products--participation/products/odss/jumbotronstandard_1400x483_odss.jpg">Data points connected</option>
+                        </optgroup>
+
+                        <optgroup label="Misc">
+                          <option value="https://www2.arccorp.com/globalassets/homepage/redesign/slides/carousel14.jpg">Overhead Topography</option>
+                          <option value="https://www2.arccorp.com/globalassets/homepage/redesign/slides/carousel16.jpg">Mobile Phone</option>
                         </optgroup>
 
                       </select>
