--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
       }
     </style>
 
-    <link rel="stylesheet" href="arc-airportis.min.css" />
+    <link rel="stylesheet" href="imageMaker.min.css" />
   </head>
 
   <body class=" 10298">
@@ -1315,7 +1315,7 @@
     <script src="https://www2.arccorp.com/globalassets/static/scripts.js?1235452123d2"></script>
     <script src="https://www2.arccorp.com/static/js/foundation-custom.js"></script>
     <script src="https://www2.arccorp.com/globalassets/static/app.js?462233"></script>
-    <script src="arc-airportis.min.js"></script>
+    <script src="imageMaker.min.js"></script>
 
     <!-- Google Tag Manager (noscript) -->
     <noscript
